tests/error/typeof_error.gw
var typeof( 1 + 2 ) i;
